# spaceflights

./: pyproject.toml  requirements.sh
conf/base/parameters/: my_pipeline.yml
src/spaceflights/pipelines/my_pipeline/: README.md  __init__.py  nodes.py  pipeline.py
src/tests/pipelines/my_pipeline/: test_pipeline.py
