[tool.poetry]
name = "spaceflights"
version = "0.1.0"
description = ""
authors = ["g.larvor <gwennaelle.larvor@soyhuce.fr>"]
readme = "README.md"

[tool.kedro]
package_name = "spaceflights"
project_name = "Spaceflights"
kedro_init_version = "0.18.12"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/spaceflights -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
kedro = ">=0.18.12,<0.19.0"
matplotlib = "^3.7.2"
black = ">=22.0,<23.0"
flake8 = ">=3.7.9,<5.0"
ipython = {version = ">=8.10,<9.0", markers = "python_version >= \"3.8\""}
isort = ">=5.0,<6.0"
jupyter = ">=1.0,<2.0"
jupyterlab-server = ">=2.11.1,<2.16.0"
jupyterlab = ">=3.0,<4.0"
kedro-datasets = {version = ">=1.0,<2.0", extras = ["pandas-csvdataset", "pandas-exceldataset", "pandas-parquetdataset"]}
kedro-telemetry = ">=0.2.0,<0.3.0"
kedro-viz = ">=6.0,<7.0"
nbstripout = ">=0.4,<1.0"
pytest-cov = ">=3.0,<4.0"
pytest-mock = ">=1.7.1,<2.0"
pytest = ">=7.2,<8.0"
scikit-learn = ">=1.0,<2.0"
